Thu Nov 25 15:24:00 CET 2004 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/java3d:  Put back this simple viewer.

	* src/org/jcae/mesh/MeshView.java:  A main entry to display jcae3d meshes.

Thu Nov 25 12:30:12 CET 2004 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/cad/occ/OCCShapeBuilder.java
	  src/org/jcae/mesh/Mesher.java:  Interface of IGESControl_Reader in occjava.jar has changed.

Wed Nov 24 15:39:03 CET 2004 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java:  Fix test for flat troamgles in circumcenter().

Tue Nov 23 10:19:22 CET 2004 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/Mesher.java:  Change argument order, and accept a new argument for deflection.  This needs to be synchronized with jcae-netbeans-mesh.
	* src/org/jcae/mesh/amibe/metrics/Metric3D.java:  Metrics can now be changed at run-time.  If deflection is null, computeMetric3DIso() is called for efficiency reasons.  Otherwise, metrics are computed by computeMetric3DCurvIso().

Fri Nov 19 18:04:51 CET 2004 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/Mesher.java
	  src/org/jcae/mesh/mesher/algos2d/RefineFace1.java: Call org.jcae.mesh.amibe.algos2d.Insertion instead of TargetSize, which means that all 2d algos now belong to amibe.

Fri Nov 19 16:51:29 CET 2004 Denis Barbier <barbier@users.sourceforge.net>

	* Add this ChangeLog, build.properties and build.xml
	* Remove a bunch of useless files, mostly related to old UI
	  and Corba.
	* Remove:
	     org.jcae.mesh.algos
	     org.jcae.mesh.ds
	     org.jcae.mesh.mesher.algos2d.RefineFaceOld
	     org.jcae.mesh.util.Pair
	     org.jcae.mesh.Algo
	* src/org/jcae/mesh/util/Calculs.java: Remove unused methods.

Fri Nov 19 16:49:50 CET 2004 Denis Barbier <barbier@users.sourceforge.net>

	* Creation of the new jCAE-mesher module, by importing the tagged
	  version Before_copy_jCAE_mesher of jCAE.
